:alien: Correcting header spacing

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h2 {
 
 header {
   background: #2d4a22;
-  padding: 2rem 0;
+  padding: 2rem 0 10rem;
   text-align: center;
 }
 
@@ -122,8 +122,6 @@ td.income {
 td.expense {
   color: #e92929;
 }
-
-td.date {}
 
 /* ========== Footer ========== */
 
